# sleepy-factory

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_updated.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  smoke.yml
docs/public/: 00_overview.md  01_architecture.md  02_state_machine_and_leases.md  03_stage_contracts.md  04_compliance_overview.md  05_cost_and_scaling_overview.md
sleepy_factory/: artifacts.py  cli.py  config.py
sleepy_factory/db/: models.py  session.py
sleepy_factory/db/migrations/: README  env.py  script.py.mako
sleepy_factory/db/migrations/versions/: 033207338ec3_.py  1767c0f40807_add_script_stage.py  58d860fc2dee_add_visuals_and_render_stages.py  958d0d1b987c_init_jobs_table.py  a13df239e99a_per_stage_leases.py
tests/: test_artifacts_manifest.py
tests/smoke/: test_full_pipeline.py  test_placeholder.py  test_script_stage_manifest.py
